Alterando o código para evitar acesso a index fora do intervalo.